# 2026-fwdays-agentic-greenfield-task

./: .gitignore  .pre-commit-config.yaml  AGENTS.md
.cursor/rules/: current-state-journal.mdc
.cursor/skills/openspec-apply-change/: SKILL.md
.cursor/skills/openspec-archive-change/: SKILL.md
.cursor/skills/openspec-explore/: SKILL.md
.cursor/skills/openspec-propose/: SKILL.md
.cursor/skills/openspec-sync-specs/: SKILL.md
.github/workflows/: ci.yml
docs/: capabilities.md  prd.md  product-overview.md
nedilya-na-vagakh/: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
nedilya-na-vagakh/bot/: __init__.py  commands.py  compare.py  config.py  db.py  main.py  messages.py  middleware.py  models.py  month_stats.py  name_validation.py  parse.py  reminder_message.py  reminder_scheduler.py  reminder_time.py  repository.py  trends.py  view_format.py
nedilya-na-vagakh/bot/handlers/: help.py  onboarding.py  settings.py  views.py  weigh_in.py
nedilya-na-vagakh/tests/: test_command_surface.py  test_compare.py  test_config.py  test_db.py  test_dispatch_routing.py  test_help_handlers.py  test_main.py  test_messages.py  test_middleware.py  test_month_stats.py  test_name_validation.py  test_onboarding_handlers.py  test_parse.py  test_reminder_message.py  test_reminder_scheduler.py  test_reminder_time.py  test_settings_handlers.py  test_trends.py  test_views_handlers.py  test_weigh_in_handlers.py
openspec/changes/add-trend-labels/: proposal.md  tasks.md
(+84 files in other folders)
